[gd_scene load_steps=3 format=3 uid="uid://desmubp2w8qol"]

[ext_resource type="Script" path="res://Scene/Main_menu/main.gd" id="1_h0kkf"]
[ext_resource type="Texture2D" uid="uid://d2c4rrw23itxu" path="res://Assets/background/BackMainMenu.png" id="2_2rwyn"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h0kkf")

[node name="BackMainMenu" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2rwyn")
expand_mode = 1
flip_h = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 80

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
modulate = Color(0.310617, 0.310617, 0.310617, 1)
self_modulate = Color(1, 1, 1, 0.313726)
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 30
alignment = 1

[node name="GameName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "Lady rescue"

[node name="NewGame" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Новая игра"

[node name="LoadGame" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Загрузить игру"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 80)
layout_mode = 2
tooltip_text = "Загрузить игру"
theme_override_font_sizes/font_size = 32
text = "Настройки"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 80)
layout_mode = 2
tooltip_text = "Загрузить игру"
theme_override_font_sizes/font_size = 32
text = "Выход"

[connection signal="pressed" from="MarginContainer/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
